Fix: background jump when opening on mobile browsers.

--- a/assets/base.css
+++ b/assets/base.css
@@ -30,7 +30,7 @@ ul {
 
 #getmore-header {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh + 60px);
 
   display: flex;
 
